@@ -1,3 +1,7 @@
+2017-08-22  Danilo Chang
+
+     * Add getProperty implement
+
 2017-08-21  Danilo Chang
 
      * Bump version to v0.1.1
